crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table lp_null partition of lp for values in (null);
---
CreateStmt@0..58
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..20
    Ident@13..20 "lp_null"
  Whitespace@20..21 " "
  Partition@21..30 "partition"
  Whitespace@30..31 " "
  Of@31..33 "of"
  Whitespace@33..34 " "
  RangeVar@34..36
    Ident@34..36 "lp"
  Whitespace@36..37 " "
  For@37..40 "for"
  Whitespace@40..41 " "
  Values@41..47 "values"
  Whitespace@47..48 " "
  PartitionBoundSpec@48..56
    InP@48..50 "in"
    Whitespace@50..51 " "
    Ascii40@51..52 "("
    AConst@52..56
      NullP@52..56 "null"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

