crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@84.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table mc3p0 partition of mc3p for values from (minvalue, minvalue, minvalue) to (1, 1, 1);"
---
CreateStmt@0..97
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..18
    Ident@13..18 "mc3p0"
  Whitespace@18..19 " "
  Partition@19..28 "partition"
  Whitespace@28..29 " "
  Of@29..31 "of"
  Whitespace@31..32 " "
  RangeVar@32..36
    Ident@32..36 "mc3p"
  Whitespace@36..37 " "
  For@37..40 "for"
  Whitespace@40..41 " "
  Values@41..47 "values"
  Whitespace@47..48 " "
  PartitionBoundSpec@48..95
    From@48..52 "from"
    Whitespace@52..53 " "
    Ascii40@53..54 "("
    ColumnRef@54..62
      Minvalue@54..62 "minvalue"
    Ascii44@62..63 ","
    Whitespace@63..64 " "
    ColumnRef@64..72
      Minvalue@64..72 "minvalue"
    Ascii44@72..73 ","
    Whitespace@73..74 " "
    ColumnRef@74..82
      Minvalue@74..82 "minvalue"
    Ascii41@82..83 ")"
    Whitespace@83..84 " "
    To@84..86 "to"
    Whitespace@86..87 " "
    Ascii40@87..88 "("
    AConst@88..89
      Iconst@88..89 "1"
    Ascii44@89..90 ","
    Whitespace@90..91 " "
    AConst@91..92
      Iconst@91..92 "1"
    Ascii44@92..93 ","
    Whitespace@93..94 " "
    AConst@94..95
      Iconst@94..95 "1"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

