crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@88.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table mc3p4 partition of mc3p for values from (10, 10, 20) to (10, maxvalue, maxvalue);"
---
CreateStmt@0..94
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..18
    Ident@13..18 "mc3p4"
  Whitespace@18..19 " "
  Partition@19..28 "partition"
  Whitespace@28..29 " "
  Of@29..31 "of"
  Whitespace@31..32 " "
  RangeVar@32..36
    Ident@32..36 "mc3p"
  Whitespace@36..37 " "
  For@37..40 "for"
  Whitespace@40..41 " "
  Values@41..47 "values"
  Whitespace@47..48 " "
  PartitionBoundSpec@48..92
    From@48..52 "from"
    Whitespace@52..53 " "
    Ascii40@53..54 "("
    AConst@54..56
      Iconst@54..56 "10"
    Ascii44@56..57 ","
    Whitespace@57..58 " "
    AConst@58..60
      Iconst@58..60 "10"
    Ascii44@60..61 ","
    Whitespace@61..62 " "
    AConst@62..64
      Iconst@62..64 "20"
    Ascii41@64..65 ")"
    Whitespace@65..66 " "
    To@66..68 "to"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    AConst@70..72
      Iconst@70..72 "10"
    Ascii44@72..73 ","
    Whitespace@73..74 " "
    ColumnRef@74..82
      Maxvalue@74..82 "maxvalue"
    Ascii44@82..83 ","
    Whitespace@83..84 " "
    ColumnRef@84..92
      Maxvalue@84..92 "maxvalue"
  Ascii41@92..93 ")"
  Ascii59@93..94 ";"

