crates/pg_syntax/tests/snapshots/postgres_regress/password@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT rolpassword FROM pg_authid WHERE rolname='regress_passwd_empty';"
---
SelectStmt@0..71
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..18
    ColumnRef@7..18
      Ident@7..18 "rolpassword"
  Whitespace@18..19 " "
  From@19..23 "FROM"
  Whitespace@23..24 " "
  RangeVar@24..33
    Ident@24..33 "pg_authid"
  Whitespace@33..34 " "
  Where@34..39 "WHERE"
  Whitespace@39..40 " "
  AExpr@40..70
    ColumnRef@40..47
      Ident@40..47 "rolname"
    Ascii61@47..48 "="
    AConst@48..70
      Sconst@48..70 "'regress_passwd_empty'"
  Ascii59@70..71 ";"

